# moksh_XIM_hackathon

./: LICENSE  README.md  main.py  pyproject.toml
moksh/: index.html  package-lock.json  package.json
moksh-backend/: .gitignore  README.md  app.py  model_ctrl.py  phoneba.py  pyproject.toml  scrapper.py  web.html
moksh-backend/model/: embed_llama.py  populate_db.py  populate_sql.py
moksh/public/: newpage.html
moksh/src/: App.jsx  CancelledTitles.jsx  DefunctTitles.jsx  Events.jsx  News.jsx  OrganizationalChart.jsx  Register.jsx  RegisterdTitle.jsx  RegistrationPeriod.jsx  Regularity.jsx  WhatWeAre.jsx  WhatWeDo.jsx  WhatWeWere.jsx  footer.jsx  home.jsx  index.css  main.jsx  policy.jsx
moksh/src/extra/: News.jsx  OrganizationalChart.jsx  RegistrationPeriod.jsx  WhatWeDo.jsx  WhatWeWere.jsx  connect.jsx
moksh/src/pages/: CancelledTitles.jsx  DefunctTitles.jsx  RegisterdTitle.jsx
