[project]
name = "moksh-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.3",
    "httpx>=0.28.1",
    "ollama>=0.6.1",
    "phonemizer>=3.3.0",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
]
